--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -66,6 +66,12 @@
       <DependentUpon>SQLAccount.resx</DependentUpon>
     </Compile>
     <Compile Include="DB\DBConnection.cs" />
+    <Compile Include="GUI\DisconnectedDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\DisconnectedDialog.Designer.cs">
+      <DependentUpon>DisconnectedDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.cs" />
@@ -80,6 +86,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>SQLAccount.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\DisconnectedDialog.resx">
+      <DependentUpon>DisconnectedDialog.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
