--- a/QManager/QManager/Properties/Settings.settings
+++ b/QManager/QManager/Properties/Settings.settings
@@ -21,7 +21,10 @@
       <Value Profile="(Default)">2</Value>
     </Setting>
     <Setting Name="DBMaxPoolSize" Type="System.UInt32" Scope="Application">
-      <Value Profile="(Default)">2</Value>
+      <Value Profile="(Default)">3</Value>
+    </Setting>
+    <Setting Name="DBConnectionTimeout" Type="System.UInt32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
     </Setting>
   </Settings>
 </SettingsFile>
