--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -119,6 +119,12 @@
     <Compile Include="GUI\DisconnectedDialog.Designer.cs">
       <DependentUpon>DisconnectedDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Login\FLogin.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Login\FLogin.Designer.cs">
+      <DependentUpon>FLogin.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelMapping\AccountMap.cs" />
     <Compile Include="CustomProperties\TABLE_NAME.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -155,6 +161,9 @@
     <EmbeddedResource Include="CustomProperties\TABLE_NAME.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>TABLE_NAME.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Login\FLogin.resx">
+      <DependentUpon>FLogin.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
