--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -125,6 +125,12 @@
     <Compile Include="GUI\Login\FLogin.Designer.cs">
       <DependentUpon>FLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Register\FRegister.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Register\FRegister.Designer.cs">
+      <DependentUpon>FRegister.cs</DependentUpon>
+    </Compile>
     <Compile Include="ModelMapping\AccountMap.cs" />
     <Compile Include="CustomProperties\TABLE_NAME.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -164,6 +170,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Login\FLogin.resx">
       <DependentUpon>FLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Register\FRegister.resx">
+      <DependentUpon>FRegister.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
