--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -99,6 +99,7 @@
     <Compile Include="BaseClass\BaseChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="BusinessLogic\HRManager.cs" />
     <Compile Include="DAO\BaseDAO.cs" />
     <Compile Include="DAO\DAOAccount.cs" />
     <Compile Include="DAO\DAODepartment.cs" />
@@ -188,6 +189,7 @@
       <DependentUpon>MainScreen.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\QManager.Model.Department.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
