Update bunch of logic and file

--- a/QManager/QManager/App.config
+++ b/QManager/QManager/App.config
@@ -11,29 +11,11 @@
 
     <applicationSettings>
         <QManager.Properties.Settings>
-            <setting name="DBHost" serializeAs="String">
+            <setting name="APIHost" serializeAs="String">
                 <value>35.201.228.124</value>
             </setting>
-            <setting name="DBPort" serializeAs="String">
-                <value>3306</value>
-            </setting>
-            <setting name="DBSchema" serializeAs="String">
-                <value>sale_manager</value>
-            </setting>
-            <setting name="DBUser" serializeAs="String">
-                <value>sale</value>
-            </setting>
-            <setting name="DBPass" serializeAs="String">
-                <value>123456</value>
-            </setting>
-            <setting name="DBMinPoolSize" serializeAs="String">
-                <value>2</value>
-            </setting>
-            <setting name="DBMaxPoolSize" serializeAs="String">
-                <value>3</value>
-            </setting>
-            <setting name="DBConnectionTimeout" serializeAs="String">
-                <value>1</value>
+            <setting name="APIPort" serializeAs="String">
+                <value>1234</value>
             </setting>
         </QManager.Properties.Settings>
     </applicationSettings>
@@ -46,7 +28,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Remotion.Linq" publicKeyToken="fee00910d6e5f53b" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.0.0" newVersion="2.2.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NHibernate" publicKeyToken="aa95f207798dfdb4" culture="neutral" />
