--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -26,6 +26,8 @@
     <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -68,8 +70,8 @@
     <Reference Include="NHibernate, Version=5.0.0.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.5.0.3\lib\net461\NHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="Remotion.Linq, Version=2.1.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
-      <HintPath>..\packages\Remotion.Linq.2.1.2\lib\net45\Remotion.Linq.dll</HintPath>
+    <Reference Include="Remotion.Linq, Version=2.2.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
+      <HintPath>..\packages\Remotion.Linq.2.2.0\lib\net45\Remotion.Linq.dll</HintPath>
     </Reference>
     <Reference Include="Remotion.Linq.EagerFetching, Version=2.1.0.0, Culture=neutral, PublicKeyToken=fee00910d6e5f53b, processorArchitecture=MSIL">
       <HintPath>..\packages\Remotion.Linq.EagerFetching.2.1.0\lib\net45\Remotion.Linq.EagerFetching.dll</HintPath>
@@ -82,6 +84,13 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Net.Http.Extensions, Version=2.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Extensions.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.Primitives, Version=4.2.29.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Net.Http.2.2.29\lib\net45\System.Net.Http.Primitives.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http.WebRequest" />
     <Reference Include="System.Runtime" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Transactions" />
@@ -99,21 +108,18 @@
     <Compile Include="BaseClass\BaseChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="BusinessLogic\HRManager.cs" />
-    <Compile Include="DAO\BaseDAO.cs" />
-    <Compile Include="DAO\DAOAccount.cs" />
-    <Compile Include="DAO\DAODepartment.cs" />
-    <Compile Include="DAO\DAOFunction.cs" />
-    <Compile Include="DAO\DAOPermission.cs" />
-    <Compile Include="DAO\DAOProfile.cs" />
-    <Compile Include="DAO\Script\SQLAccount.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>SQLAccount.resx</DependentUpon>
+    <Compile Include="GUI\Department\AddDeparment.cs">
+      <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DB\DBConnection.cs" />
-    <Compile Include="DB\FluentNHibernateConnection.cs" />
-    <Compile Include="DB\SqlStatementInterceptor.cs" />
+    <Compile Include="GUI\Department\AddDeparment.Designer.cs">
+      <DependentUpon>AddDeparment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Department\Role\AddRole.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Department\Role\AddRole.Designer.cs">
+      <DependentUpon>AddRole.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\DisconnectedDialog.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -132,23 +138,25 @@
     <Compile Include="GUI\Register\FRegister.Designer.cs">
       <DependentUpon>FRegister.cs</DependentUpon>
     </Compile>
-    <Compile Include="ModelMapping\AccountMap.cs" />
     <Compile Include="CustomProperties\TABLE_NAME.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TABLE_NAME.resx</DependentUpon>
     </Compile>
-    <Compile Include="ModelMapping\DepartmentMap.cs" />
-    <Compile Include="ModelMapping\FuntionMap.cs" />
-    <Compile Include="ModelMapping\PermissionMap.cs" />
-    <Compile Include="ModelMapping\ProfileMap.cs" />
     <Compile Include="Model\BaseModel.cs" />
     <Compile Include="Model\Department.cs" />
     <Compile Include="Model\Function.cs" />
     <Compile Include="Model\Permission.cs" />
     <Compile Include="Model\Profile.cs" />
+    <Compile Include="Model\Role.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\HTTP_API\APIGlossary.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>APIGlossary.resx</DependentUpon>
+    </Compile>
+    <Compile Include="Services\HTTP_API\HTTPClientManager.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="GUI\MainScreen.cs">
       <SubType>Form</SubType>
@@ -157,11 +165,6 @@
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Account.cs" />
-    <EmbeddedResource Include="DAO\Script\SQLAccount.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>SQLAccount.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </EmbeddedResource>
     <EmbeddedResource Include="GUI\DisconnectedDialog.resx">
       <DependentUpon>DisconnectedDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -187,6 +190,10 @@
     </Compile>
     <EmbeddedResource Include="GUI\MainScreen.resx">
       <DependentUpon>MainScreen.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Services\HTTP_API\APIGlossary.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>APIGlossary.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
@@ -237,4 +244,11 @@
     <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets'))" />
+  </Target>
 </Project>
