--- a/QManager/QManager/packages.config
+++ b/QManager/QManager/packages.config
@@ -3,8 +3,11 @@
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
   <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
   <package id="Iesi.Collections" version="4.0.3" targetFramework="net461" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
   <package id="MySql.Data" version="6.10.6" targetFramework="net461" />
   <package id="NHibernate" version="5.0.3" targetFramework="net461" />
-  <package id="Remotion.Linq" version="2.1.2" targetFramework="net461" />
+  <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
   <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
 </packages>
