--- a/QManager/QManager/QManager.csproj
+++ b/QManager/QManager/QManager.csproj
@@ -108,14 +108,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppStatus.cs" />
     <Compile Include="BaseClass\BaseChildForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Department\AddDeparment.cs">
+    <Compile Include="GUI\Department\AddDepartment.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="GUI\Department\AddDeparment.Designer.cs">
-      <DependentUpon>AddDeparment.cs</DependentUpon>
+    <Compile Include="GUI\Department\AddDepartment.Designer.cs">
+      <DependentUpon>AddDepartment.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Department\Role\AddRole.cs">
       <SubType>Form</SubType>
@@ -129,11 +130,23 @@
     <Compile Include="GUI\DisconnectedDialog.Designer.cs">
       <DependentUpon>DisconnectedDialog.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\ErrorDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\ErrorDialog.Designer.cs">
+      <DependentUpon>ErrorDialog.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Login\FLogin.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI\Login\FLogin.Designer.cs">
       <DependentUpon>FLogin.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Profile\FProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Profile\FProfile.Designer.cs">
+      <DependentUpon>FProfile.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\Register\FRegister.cs">
       <SubType>Form</SubType>
@@ -169,6 +182,9 @@
       <DependentUpon>MainScreen.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Account.cs" />
+    <EmbeddedResource Include="GUI\Department\AddDepartment.resx">
+      <DependentUpon>AddDepartment.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\DisconnectedDialog.resx">
       <DependentUpon>DisconnectedDialog.cs</DependentUpon>
     </EmbeddedResource>
@@ -176,8 +192,14 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>TABLE_NAME.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Include="GUI\ErrorDialog.resx">
+      <DependentUpon>ErrorDialog.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="GUI\Login\FLogin.resx">
       <DependentUpon>FLogin.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Profile\FProfile.resx">
+      <DependentUpon>FProfile.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Register\FRegister.resx">
       <DependentUpon>FRegister.cs</DependentUpon>
