--- a/QManager/QManager/packages.config
+++ b/QManager/QManager/packages.config
@@ -1,14 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr3.Runtime" version="3.5.1" targetFramework="net461" />
-  <package id="FluentNHibernate" version="2.0.3.0" targetFramework="net461" />
-  <package id="Iesi.Collections" version="4.0.3" targetFramework="net461" />
+  <package id="FluentNHibernate" version="2.1.2" targetFramework="net461" />
+  <package id="Google.Apis" version="1.35.2" targetFramework="net461" />
+  <package id="Google.Apis.Auth" version="1.35.2" targetFramework="net461" />
+  <package id="Google.Apis.Core" version="1.35.2" targetFramework="net461" />
+  <package id="Google.Apis.Drive.v3" version="1.35.2.1344" targetFramework="net461" />
+  <package id="Google.Protobuf" version="3.6.1" targetFramework="net461" />
+  <package id="Iesi.Collections" version="4.0.4" targetFramework="net461" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net461" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net461" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net461" />
-  <package id="MySql.Data" version="6.10.6" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="NHibernate" version="5.0.3" targetFramework="net461" />
+  <package id="MySql.Data" version="8.0.12" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NHibernate" version="5.1.3" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
-  <package id="Remotion.Linq.EagerFetching" version="2.1.0" targetFramework="net461" />
+  <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net461" />
 </packages>
